welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: Invalid literal number
                            var j= 2T(1) = 1;
                                   ^golomb:2: error: illegal start of simple expression
                            var j= 2T(1) = 1;
                                   ^